public interface Cargable {
    void cargar();
    void descargar();
}
