public interface Encendible {
    void encender();
    void apagar();
}
