public interface Modelo {
    public abstract Double getBateria();

    public abstract Double getDescarga();
}
