public class MotorolaG5 implements Modelo {
    @Override
    public Double getBateria() {
        return 5.0;
    }

    @Override
    public Double getDescarga() {
        return 0.25;
    }
}
