@startuml
class Celular implements ServicioTelefonico, Cargable, Encendible {
    - Modelo modelo
    - boolean encendido
    - Double bateria

    + encender()
    + apagar()
    + llamar()
    + recibir()
    + finalizar()
    + cargar()
    + descargar()
}

interface Modelo {
    + getBateria()
    + getDescarga()
}

class MotorolaG5 implements Modelo {
    + getBateria()
    + getDescarga()
}

class iPhone implements Modelo {
    + getBateria()
    + getDescarga()
}



interface ServicioTelefonico {
    + llamar()
    + recibir()
    + finalizar()
}

interface Cargable {
    + cargar()
    + descargar()
}

interface Encendible {
    + encender()
    + apagar()
}

class Persona {
    - String nombre
    - Celular celular

    + getNombre()
    + getCelular()
    + llamar()
    + recibirLlamada()
    + finalizarLlamada()
}


' relaciones
Celular o-- Modelo : composición

' Modelo <|-- MotorolaG5
' Modelo <|-- iPhone

Persona o-- Celular : agregación
@enduml